# Nonparametric-Analysis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PHASE3_PLAN.md  README.md  README_OLD.md  main.py  pyproject.toml  프로젝트_구조_개선_제안.md
01_Specs/: 01_비모수_분석_spec.md  02_비모수_분석_이론가이드.md  03_비모수_보고서_템플릿.md  04_비모수_분석_패키지_가이드.md  05_비모수_통계분석_결과_해석_가이드.md  README.md
02_Data/: sample_nonparametric.csv  데이터_준비_가이드.md
03_Code/scripts/: generate_sample_dataset.py  run_nonparametric_analysis.py
03_Code/scripts/dev/: add_explanations.py  update_notebook_final.py
03_Code/src/nonparametric_analysis/: __init__.py
04_Notebooks/: nonparametric_analysis_final.ipynb  nonparametric_analysis_template.ipynb
05_Outputs/nonparametric_run/: analysis_report.md  correlation_pvalues_adjusted.csv  duplicate_rows.csv  formula_violations.csv  kendall_p_value.csv  kendall_p_value_fdr.csv  mad_outliers_feature_1.csv  missing_report.csv  spearman_corr.csv  summary.csv
05_Outputs/notebook_demo/: integrity_summary.csv  kendall_corr.csv  spearman_corr.csv  spearman_p_value_fdr.csv  trend_summary.csv
05_Outputs/reorg_test/: analysis_report.md  integrity_summary.csv  range_violations_feature_1.csv  spearman_p_value.csv  spearman_p_value_fdr.csv  summary.csv
99_Archive/: 비모수 데이터 통계 분석 가이드-Claude-opus-4.6-full.md  비모수 데이터 통계 분석 가이드-Claude-opus-4.6.md  비모수 데이터 통계 분석 가이드-Codex-5.3.md
src/nonparametric_analysis/analysis/: __init__.py  integrity_checks.py  sample_data.py  (+1 more)
tests/: __init__.py  test_all_methods.py  test_boxplot_empty.py  test_main.py  test_nonparametric_analysis.py
(+13 files in other folders)
